test/Fail/Issue4092.err
Issue4092.agda:6.8-12: error: [UnequalTerms]
The terms
  lzero
and
  lsuc lzero
are not equal at type Level
when checking that the expression refl has type lzero ≡ lsuc lzero
